--- a/home.html
+++ b/home.html
@@ -6,7 +6,6 @@
     <title>Kalkulator Warna Resistor</title>
   </head>
   <body>
-    <h1>Hai halo</h1>
-    <h3>Hai cok</h3>
+    <h1>home</h1>
   </body>
 </html>
