--- a/home.html
+++ b/home.html
@@ -6,6 +6,10 @@
     <title>Kalkulator Warna Resistor</title>
   </head>
   <body>
-    <h1>home</h1>
+    <h1>Apa itu kalkulator resistor warna?</h1>
+    <p>Kalkulator resistor warna adalah alat yang digunakan untuk menghitung nilai ohm</p>
+    <br>
+    <h1>Panduan memakai kalkulator warna</h1>
+    <p></p>
   </body>
 </html>
