--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Apa itu kalkulator resistor warna?</h1>
-    <p>Kalkulator resistor warna adalah alat yang digunakan untuk menghitung nilai ohm</p>
+    <p>Kalkulator resistor warna adalah alat yang digunakan untuk menghitung nilai ohm berdasarkan kode pita warna</p>
     <br>
     <h1>Panduan memakai kalkulator warna</h1>
     <p></p>
