--- a/home.html
+++ b/home.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <h1>Apa itu kalkulator resistor warna?</h1>
-    <p>Kalkulator resistor warna adalah alat yang digunakan untuk menghitung nilai ohm berdasarkan kode pita warna</p>
+    <p>Kalkulator resistor warna adalah alat yang digunakan untuk menghitung nilai ohm berdasarkan kode pita warna. Resistansi total dari beberapa kode pita warna disusun secara paralel atau seri dan resistansi konduktor disusun berdasarkan ukuran dan konduktivitas.</p>
     <br>
     <h1>Panduan memakai kalkulator warna</h1>
-    <p></p>
+    <p>Cara memakai kalkulator resistor warna:</p>
   </body>
 </html>
