--- a/home.html
+++ b/home.html
@@ -6,10 +6,13 @@
     <title>Kalkulator Warna Resistor</title>
   </head>
   <body>
-    <h1>Apa itu kalkulator resistor warna?</h1>
-    <p>Kalkulator resistor warna adalah alat yang digunakan untuk menghitung nilai ohm</p>
-    <br>
-    <h1>Panduan memakai kalkulator warna</h1>
-    <p></p>
+    <nav class="navbar">
+      <div class="container">
+        <ul class="menu">
+          <li><a href="#"></a>Home</li>
+          <li><a href="#about"></a>About</li>
+        </ul>
+      </div>
+    </nav>
   </body>
 </html>
