--- a/home.html
+++ b/home.html
@@ -9,6 +9,12 @@
     <h1>Apa itu kalkulator warna resistor?</h1>
     <p>Kalkulator warna resistor adalah alat yang digunakan untuk menghitung nilai ohm berdasarkan kode pita warna. Resistansi total dari beberapa kode pita warna disusun secara paralel atau seri dan resistansi konduktor disusun berdasarkan ukuran dan konduktivitas.</p>
     <h1>Kode warna resistor</h1>
-    <h4>Pita warna pertama</h4>
+    <h3>Pita warna pertama:</h3>
+    <br>
+    <h3>Pita warna kedua:</h3>
+    <br>
+    <h3>Pita warna ketiga:</h3>
+    <br>
+    <h3>Pita warna keempat:</h3>
   </body>
 </html>
