--- a/home.html
+++ b/home.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kalkulator Warna Resistor</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav class="navbar">
       <div class="container">
+        
         <ul class="menu">
           <li><a href="#"></a>Home</li>
           <li><a href="#about"></a>About</li>
