--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
     <p>merah</p>
     <p>oranye</p>
     <br>
-    <h3>Pita warna kedua:</h3>
+    <h3>Pita warna kedua</h3>
     <br>
     <h3>Pita warna ketiga:</h3>
     <br>
