--- a/home.html
+++ b/home.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kalkulator Warna Resistor</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="container">
-        
         <ul class="menu">
           <li><a href="#"></a>Home</li>
-          <li><a href="#about"></a>About</li>
+          <li><a href="#about"></a>About Us</li>
         </ul>
       </div>
     </nav>
