--- a/home.html
+++ b/home.html
@@ -15,8 +15,15 @@
     <p>coklat</p>
     <p>merah</p>
     <p>oranye</p>
+    <p>kuning</p>
+    <p>hijau</p>
+    <p>biru</p>
+    <p>ungu</p>
+    <p>abu</p>
+    <p>putih</p>
     <br>
-    <h3>Pita warna kedua</h3>
+    <h3>Pita warna kedua:</h3>
+    <p>hitam</p>
     <br>
     <h3>Pita warna ketiga:</h3>
     <br>
